# k8s-auto-docker-proxy

./: Dockerfile  README.md  docker-compose.crproxy.yaml  docker-compose.yaml  main.py  pyproject.toml
