[tool.poetry]
name = "k8s-auto-docker-proxy"
version = "0.1.0"
description = ""
authors = ["weizhonghua <wzh2012@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
